--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ jjk_ep0
 __pycache__
 env
 gensim_models
-chess-engines\seb-cli-chess\seb_positions.txt
+chess-engines/seb-cli-chess/seb_positions.txt
